--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 dev_django
 agenda/.vscode/settings.json
 agenda/core/migrations/
-agenda/core/__pycache__/
-agenda/agenda/__pycache__/
+*__pycache__
+*.pyc
